# sensortag-bgapi

./: README.md  setup.cfg
src/SensorTag/: SensorTag.py  __init__.py
