[metadata]
name = sensortag-bgapi-NullMember
version = 0.0.1
author = Malik Enes Safak
author_email = e.maliksafak@gmail.com
description = TI Sensortag (CC2650) API using BGAPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NullMember/sensortag-bgapi
project_urls =
    Bug Tracker = https://github.com/NullMember/sensortag-bgapi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    bgapi @ git+https://github.com/mjbrown/bgapi

[options.packages.find]
where = src